--- a/package.json
+++ b/package.json
@@ -23,6 +23,24 @@
 				"fileMatch": "scripts.json",
 				"url": "./out/schema.json"
 			}
+		],
+		"yamlValidation": [
+			{
+				"fileMatch": "velociraptor.yaml",
+				"url": "./out/schema.json"
+			},
+			{
+				"fileMatch": "velociraptor.yml",
+				"url": "./out/schema.json"
+			},
+			{
+				"fileMatch": "scripts.yaml",
+				"url": "./out/schema.json"
+			},
+			{
+				"fileMatch": "scripts.yml",
+				"url": "./out/schema.json"
+			}
 		]
 	},
 	"scripts": {
@@ -47,5 +65,6 @@
 		"ts-json-schema-generator": "^0.68.0",
 		"typescript": "^3.8.3",
 		"vscode-test": "^1.3.0"
-	}
+  },
+  "extensionDependencies": ["redhat.vscode-yaml"]
 }
